@@ -1,6 +1,7 @@
+2295 [OneClick] fixed some errors. Bug #703 + #707
 2294 [OneClick] only supported subtitle tracks will be added
 2293 [AVS Script Creator] fixed "Clever (TM) anamorphic encoding" if using "Encode non-mod 16"
-2292 [Audio Cutter] fixed not fading to black
+2292 [AVS Cutter] fixed not fading to black
 2291 [M2TS Muxer] disabled pure TrueHD as it is not supported by tsMuxeR
 2290 [AVS Script Creator] removed "Successfully converted to YV12" message
 2289 [OneClick] fixed error when opening some files. Bug #703
